completed majority of the css in the frontend and integrated the backend successfuly

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Python (backend)
 backend/.venv/*
 backend/__pycache__/
-backend/agents/tests/*
+backend/src/agents/tests/*
 *.pyc
 
 # Node (frontend, if you add one)
@@ -14,3 +14,4 @@ frontend/dist/
 # General
 .env
 
+*.db
